[package]
name = "PCILeechGui"
version = "0.2.1"
edition = "2024"
authors = ["Naimad"]

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["glow", "accesskit", "default_fonts"]}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
